--- a/views/downloadPage.ejs
+++ b/views/downloadPage.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download | InShare - File Sharing Made Easy</title>
+    <title>Download | Speedy-Share - File Sharing Made Easy</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
